@@ -6,6 +6,10 @@ spell you want.  Example:
 sets your RANGE weapon to
 'spell: burning hands'
 
+If you don't know the spell,
+shows which spells you do 
+know.
+
 It is helpful to bind strings
 like 'cast burning hands'
 to keys.  see 'help bind'
